# matchypatchy

./: .flake8  .gitignore  .gitmodules  ABOUT.md  Gemfile  README.md  config.yml  environment.yaml  groundtruth.csv  install.nsi  install_debug.py  installer.nsi  launcher.vbs  make_app_bundle.sh  matchypatchy_installer.nsi  matchypatchy_installer.sh  matchypatchy_installer_macos.sh  models.yml  mp_installer.py  mp_installer.spec  mp_installer_linux.spec  mp_installer_linux_onefile.spec  mp_installer_win.spec  notes.txt  pyproject.toml  requirements.txt  schema  setup.py
assets/: models.yml  schema.txt
matchypatchy/: MatchyPatchy.py  __init__.py  __main__.py  config.py  pyproject.toml  setup.cfg  test_install.py  utils.py
matchypatchy/algo/: __init__.py  animl_thread.py  import_thread.py  match_thread.py  models.py  qc_query.py  query.py  reid_thread.py  sequence_thread.py  table_thread.py  thumbnail_thread.py  thumbnails.py  utils.py
matchypatchy/database/: __init__.py  import_csv.py  import_directory.py  import_manifest.py  individual.py  location.py  media.py  mpdb.py  roi.py  setup.py  site.py  sites.py  species.py  station.py  survey.py  thumbnails.py
matchypatchy/gui/: __init__.py  display_base.py  display_compare.py  display_intro.py  display_media.py  display_single.py  forms.py  gui_assets.py  hoverlist.py  image_view.py  main_gui.py  media_table.py  popup_alert.py  popup_config.py  popup_confirm.py  popup_downloadml.py  popup_dropdown.py  popup_import.py  popup_import_csv.py  popup_import_folder.py  popup_individual.py  popup_media_edit.py  popup_media_edit_1.py  popup_ml.py  popup_pairx.py  popup_readme.py  popup_roi.py  popup_single_image.py  popup_site.py  popup_species.py  popup_station.py  popup_survey.py  popup_table.py  widget_combobox.py  widget_filterbar.py  widget_image.py  widget_image_adjustment.py  widget_media.py  widget_progressbar.py  widget_thumbnail.py  (+1 more)
matchypatchy/ml/: __init__.py  animl_thread.py  match_thread.py  miew_thread.py  models.py  reid_thread.py  sequence_thread.py
matchypatchy/models/: __init__.py  generator.py  miew_id_run.py  miewid.py  viewpoint.py
matchypatchy/pairx/: __init__.py  core.py  xai_dataset.py
matchypatchy/sqlite_vec/: __init__.py
matchypatchy/src/algo/: match_thread.py  reid_thread.py
matchypatchy/src/gui/: gui_assets.py  popup_config.py
matchypatchy/src/matchypatchy/: __init__.py  config.py
matchypatchy/src/matchypatchy/algo/: __init__.py  models.py  qc_query.py  sequence_thread.py  table_thread.py
matchypatchy/src/matchypatchy/database/: mpdb.py  thumbnails.py
(+116 files in other folders)
