[project]
name = "matchypatchy"
version = "0.1.0"
authors = [
  { name="Kyra Swanson", email="tswanson@sdzwa.org" },
]
description = "GUI tool for human validation of AI-powered animal re-identification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "animl-lite>=3.1.0",
    "chromadb>=1.3.4",
    "pyqt6=6.9.0",
]

[project.urls]
Homepage = "https://github.com/onservationtechlab/matchypatchy"
Issues = "https://github.com/onservationtechlab/matchypatchy/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"