[metadata]
name = matchypatchy
version = 0.1.0
description = MatchyPatchy beta release
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
license_file = LICENSE
url = https://conservationtechlab.github.io/matchypatchy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.12, <3.14
include_package_data = true
install_requires =
    animl-lite==3.2.1,
    onnxruntime-gpu<1.21.0,
    chromadb>=1.3.4,
    PyQt6>=6.9.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    matchypatchy = matchypatchy.main:main